fix a bug in election_dataset.ipynb

--- a/election_dataset.ipynb
+++ b/election_dataset.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%matploblib` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%matploblib inline\n",
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
